# VinylVault

./: .gitignore  DOWNLOAD.md  I18N_GUIDE.md  PLAN.md  README.md  VERSIONING.md  justfile  sonar-project.properties
.github/: copilot-instructions.md
.github/workflows/: release.yml  sonarcloud.yml  tag-and-bump.yml  test.yml
app/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
app/coverage/: lcov.info
app/coverage/lcov-report/: index.html
app/coverage/lcov-report/src/: App.css.html  App.tsx.html  CoverLookupDialog.tsx.html  appUtils.ts.html  coverLookup.ts.html  index.html
app/coverage/lcov-report/src/i18n/: config.ts.html  en.json.html  es.json.html  index.html
app/coverage/lcov-report/src/test/mocks/: index.html  tauri.ts.html
app/src/: App.css  App.test.tsx  App.tsx  CoverLookupDialog.tsx  CoverPanel.tsx  ErrorBoundary.tsx  NavigationBar.tsx  RecordForm.tsx  appUtils.ts  coverLookup.test.ts  coverLookup.ts  main.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: archive.rs  collation.rs  cover_lookup.rs  cover_storage.rs  db.rs  lib.rs  main.rs  mdb_import.rs  sanitize.rs  update_checker.rs  window_sizing.rs
app/src/hooks/: useCover.test.ts  useCover.ts  useImport.test.ts  useImport.ts  useRecord.test.ts  useRecord.ts  useSearch.test.ts  useSearch.ts
app/src/i18n/: config.ts  en.json  es.json
app/src/test/: setup.ts
app/src/test/mocks/: tauri.ts
scripts/: README.md  mdb2sqlite.py  pyproject.toml  update-version.sh
