[package]
name = "vinylvault"
version = "0.1.2"
description = "VinylVault – desktop music collection manager"
authors = ["a.alvarezayllon@gmail.com"]
license = "GPL3"
repository = "https://github.com/ayllon/VinylVault"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vinylvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
r2d2 = "0.8"
r2d2_sqlite = "0.32"
dirs = "5.0"
jetdb = { path = "vendor/jetdb" }
env_logger = "0.11"
image = "0.25"
unicode-normalization = "0.1"
unidecode = "0.3"
