[package]
name = "vinylvault"
version = "2026.3.4"
description = "VinylVault – desktop music collection manager"
authors = ["a.alvarezayllon@gmail.com"]
license = "GPL3"
repository = "https://github.com/ayllon/VinylVault"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vinylvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
rusqlite = { version = "0.39", features = ["bundled"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
r2d2 = "0.8"
r2d2_sqlite = "0.33"
dirs = "6.0"
jetdb = { path = "vendor/jetdb" }
env_logger = "0.11"
image = "0.25"
unicode-normalization = "0.1"
unidecode = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
semver = "1.0"
futures = "0.3"
